--- a/pikoc/README
+++ b/pikoc/README
@@ -1,17 +1,17 @@
 Note: This code has been tested only on Ubuntu Linux 12.04.
 
 Prerequisites:
-	1) NVIDIA CUDA 7.0 (currently available as a Release Candidate)
-	2) LLVM and Clang version 3.2
+	1) NVIDIA CUDA 8.0 (currently available as a Release Candidate)
+	2) LLVM and Clang version 3.8
 	3) gcc and g++ version 4.9 or newer
 	4) OpenGL
 
 Build pikoc:
-	1) Download LLVM and Clang version 3.2 from http://llvm.org/releases/download.html#3.2
+	1) Download LLVM and Clang version 3.8.0 from http://releases.llvm.org/download.html
 	2) Build LLVM and Clang using the instruction at http://llvm.org/docs/GettingStarted.html
 	3) cd <piko_repository>/pikoc
 	4) run './configure Linux' and edit pikocPaths.in so that the paths are correct for your 
-	   CUDA 7.0 instillation and LLVM install and source paths.
+	   CUDA 8.0 instillation and LLVM install and source paths.
 	5) run 'make' to build pikoc
 
 Building and running the sample pipelines:
